--- a/package.json
+++ b/package.json
@@ -1,5 +1,42 @@
 {
   "devDependencies": {
     "sass": "^1.54.4"
-  }
+  },
+  "name": "portfolio",
+  "version": "1.0.0",
+  "main": "index.js",
+  "dependencies": {
+    "binary-extensions": "^2.2.0",
+    "chokidar": "^3.5.3",
+    "anymatch": "^3.1.2",
+    "glob-parent": "^5.1.2",
+    "immutable": "^4.1.0",
+    "is-binary-path": "^2.1.0",
+    "is-glob": "^4.0.3",
+    "is-number": "^7.0.0",
+    "normalize-path": "^3.0.0",
+    "is-extglob": "^2.1.1",
+    "fill-range": "^7.0.1",
+    "readdirp": "^3.6.0",
+    "picomatch": "^2.3.1",
+    "braces": "^3.0.2",
+    "to-regex-range": "^5.0.1",
+    "source-map-js": "^1.0.2"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "firebase deploy --only hosting"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/JustSteve2k/Portfolio.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/JustSteve2k/Portfolio/issues"
+  },
+  "homepage": "https://github.com/JustSteve2k/Portfolio#readme",
+  "description": ""
 }
