--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "sass": "sass --watch src/style.scss public/style.css",
     "deploy": "firebase deploy --only hosting"
   },
   "repository": {
